# SEITH

./: .cursorrules  .env.example  .gitignore  Cargo.toml  GEMINI.md  PRD_AI_SEITH.md  README.md  WORKFLOW SEITH.mmd  WORKFLOW US100.mmd  check_err.txt  claude.md  debug_err2.txt  debug_err3.txt  debug_err4.txt  debug_err5.txt  debug_err6.txt  debug_output.txt  seith_output.txt  seith_stderr.txt  seith_stdout.txt  session_analysis.py
.github/workflows/: ci.yml  docker.yml  release.yml
commodities/XAUUSD/: Cargo.toml
commodities/XAUUSD/src/: lib.rs
commodities/XAUUSD/src/analytics/: auto_kill.rs  mod.rs  rekalibrasi.rs  trade_journal.rs  win_probability_map.rs
commodities/XAUUSD/src/config/: mod.rs  settings.rs  thresholds.rs
commodities/XAUUSD/src/core/: mod.rs
commodities/XAUUSD/src/core/backtest/: data_loader.rs  mod.rs  reporter.rs  simulator.rs  tick_data.rs  tick_engine.rs
commodities/XAUUSD/src/core/execution/: instant_entry.rs  limit_order.rs  mod.rs  order_manager.rs  risk_manager.rs  stop_order.rs
commodities/XAUUSD/src/core/l0_infra/: data_feed.rs  dom.rs  jam_hantu.rs  mod.rs  normalizer.rs
commodities/XAUUSD/src/core/l1_structure/: filter1_bayesian.rs  filter2_cvar.rs  filter3_market_compass.rs  filter4_orderflow.rs  mod.rs  signal_classifier.rs
commodities/XAUUSD/src/core/l2_news/: data_extractor.rs  fast_poller.rs  mod.rs  net_dev_calculator.rs  red_folder_detector.rs  regime_switch.rs  revision_handler.rs
commodities/XAUUSD/src/core/l3_engine/: anti_paralysis.rs  event_loop.rs  mod.rs  state_manager.rs  statistical_brain.rs
commodities/XAUUSD/src/indicators/: amt_volume_profile.rs  body_ratio.rs  frama.rs  gvz.rs  mod.rs  price_velocity.rs  vwap_bands.rs
commodities/XAUUSD/src/indicators/orderflow/: mod.rs  s_cvd.rs  s_delta.rs  s_dom.rs
commodities/XAUUSD/src/signals/: mod.rs  signal_enricher.rs  signal_types.rs  signal_validator.rs
commodities/majors/AUDUSD/: Cargo.toml
commodities/majors/AUDUSD/src/: lib.rs
commodities/majors/AUDUSD/src/core/: mod.rs
commodities/majors/EURUSD/: Cargo.toml
commodities/majors/EURUSD/src/: lib.rs
commodities/majors/EURUSD/src/core/: mod.rs
commodities/majors/GBPUSD/: Cargo.toml
commodities/majors/GBPUSD/src/: lib.rs
commodities/majors/GBPUSD/src/core/: mod.rs
commodities/majors/USDCAD/: Cargo.toml
commodities/majors/USDCAD/src/: lib.rs
commodities/majors/USDCAD/src/core/: mod.rs
commodities/majors/USDCHF/: Cargo.toml
commodities/majors/USDCHF/src/: lib.rs
commodities/majors/USDCHF/src/core/: mod.rs
commodities/majors/USDJPY/: Cargo.toml
commodities/majors/USDJPY/src/: lib.rs
crypto/BTCUSD/: Cargo.toml
crypto/BTCUSD/src/: lib.rs
crypto/BTCUSD/src/core/: mod.rs
crypto/ETHUSD/: Cargo.toml
crypto/ETHUSD/src/: lib.rs
crypto/ETHUSD/src/core/: mod.rs
docs/: AUTO_EXECUTE_PLAN.md  BACKTEST_REPORT_FINAL.md  IMPLEMENTATION_PHASES.md  LAPORAN_FASE_1_8.md  PRD_US100.md  TICK_ENGINE_PLAN.md
docs/PRD_US100/: 00_README.md  01_project_setup.md  02_l0_infrastructure.md  03_l3_master_control.md  04_indicators_core.md  05_indicators_orderflow.md  06_pipeline_5gate.md  07_execution_oanda.md  08_analytics_self_learning.md  09_integration_telegram.md  10_backtesting.md  11_live_paper_trading.md
indices/US100/: Cargo.toml
indices/US100/src/: lib.rs
indices/US100/src/analytics/: auto_kill.rs  mod.rs  rekalibrasi.rs  trade_journal.rs  win_probability_map.rs
indices/US100/src/config/: mod.rs  settings.rs  thresholds.rs
indices/US100/src/core/: mod.rs
indices/US100/src/core/execution/: limit_order.rs  market_entry.rs  mod.rs  order_manager.rs  risk_manager.rs  stop_order.rs
indices/US100/src/core/l0_infra/: data_feed.rs  macro_filter.rs  mod.rs  normalizer.rs  session_filter.rs
indices/US100/src/core/l1_pipeline/: hv_compass.rs  macro_gate.rs  mod.rs  pipeline_router.rs  signal_classifier.rs
indices/US100/src/core/l3_engine/: anti_paralysis.rs  event_loop.rs  mod.rs  state_manager.rs  statistical_brain.rs
indices/US100/src/indicators/: amt_volume_profile.rs  frama.rs  mod.rs  vix.rs  vwap_bands.rs  yield.rs
indices/US100/src/indicators/orderflow/: mod.rs  s_cvd.rs  s_delta.rs  s_dom.rs
indices/US100/src/signals/: mod.rs  signal_enricher.rs  signal_types.rs  signal_validator.rs
jupyter/: deep_analysis.py  download_m1_data.py  download_m1_data_14m.py  download_tick_cvd.py  download_ticks_dukascopy.py  final_backtest.py  generate_notebook.py  generate_synthetic_ticks.py  generate_ticks_v2.py  honest_validation.py  optimal_filter.py  start_jupyter.bat  sweep.py  sweep_v2.py  threshold_analysis.py  update_notebook.py
jupyter/backtest_analysis/: backtest_report.json  backtest_report_all.json  backtest_report_test.json  backtest_report_train.json  dukascopy_samples.csv  sweep_is_oos.csv  sweep_results.csv  trades_all.csv  trades_backtest.csv  trades_test.csv  trades_train.csv  xauusd_m1_3m.csv  xauusd_ticks_dukascopy.csv
jupyter/notebooks/: xauusd_overview.ipynb
jupyter/styles/: seith_dark.mplstyle
network/: backtest_1y.py  backtest_final.py  backtest_v2.py  backtest_v3.py  backtest_v4.py  debug_dom.py  debug_mt5.py  fetch_1y.py  paper_trade.py  pipeline_live.py  sweep_ofs.py  test_simple.py  us100_m15_1y.json  validate_oanda.py
notebooks/: us100_backtest.py  us100_backtest_temp.txt  us100_bt_temp.txt  us100_param_sweep.py
python/: Cargo.toml  pyproject.toml
python/python/seith_bridge/: __init__.py  calendar.py  chart.py  mt5.py  oanda.py  scraper.py  telegram.py
python/src/: lib.rs  mt5_wrapper.rs  scraper_wrapper.rs  telegram_wrapper.rs
scripts/: db_migrate.sh  run_backtest.sh  run_paper_trade.sh
seith-bin/: Cargo.toml
seith-bin/src/: main.rs
shared/: Cargo.toml
shared/migrations/: 20260707_v001_init.sql
shared/src/: lib.rs
shared/src/analytics/: mod.rs  performance_tracker.rs  report_generator.rs  trade_types.rs
shared/src/config/: env_loader.rs  mod.rs  settings.rs
shared/src/utils/: async_helpers.rs  exceptions.rs  math_utils.rs  mod.rs  time_utils.rs
shared/tests/: test_live.rs  test_scraper.rs
(+1 files in other folders)
