[package]
name = "seith-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
xauusd = { path = "../commodities/XAUUSD" }
us100 = { path = "../indices/US100" }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }

[[bin]]
name = "seith"
path = "src/main.rs"
