[package]
name = "xauusd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
shared = { path = "../../shared" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Data processing
polars = { workspace = true }

# Statistics
statrs = { workspace = true }

# Float comparison
float-cmp = { workspace = true }
