[package]
name = "xauusd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "seith-backtest"
path = "src/bin/seith_backtest.rs"

[[bin]]
name = "seith-ticktest"
path = "src/bin/seith_ticktest.rs"

[dependencies]
# Workspace dependencies
shared = { path = "../../shared" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }

# Data processing
polars = { workspace = true }

# Statistics
statrs = { workspace = true }

# Float comparison
float-cmp = { workspace = true }

# PyO3 FFI (transitive via shared, needed for types)
pyo3 = { workspace = true }
