[package]
name = "us100"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../../shared" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
polars = { workspace = true }
statrs = { workspace = true }
float-cmp = { workspace = true }
pyo3 = { workspace = true }
