[package]
name = "audusd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../../../shared" }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
